--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/BeeOrganized
 spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.password=R@17011325
 server.port=8080
