--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.jpa.database=postgresql
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/BeeOrganizedV2
+spring.datasource.url=jdbc:postgresql://localhost/BeeOrganized2
 spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.password=130902
 #server.port=8080
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 jwt.secret=4t7w!z%C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$B&E)H@McQfTjW
