--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.password=19f4ibrIVlTuHton0JDgq2ZxizvHWuug
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 jwt.secret=4t7w!z%C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$B&E)H@McQfTjW
-spring.devtools.restart.log-condition-evaluati  on-delta=false
+spring.devtools.restart.log-condition-evaluation-delta=false
