Se agrego el listId en la clase tipo actividad

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #acceso a base de datos
 spring.jpa.database=postgresql
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #Estrategia de generación de datos
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/dbbeorganizeed
 spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.password=130902
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.port=8080
